--- a/style.css
+++ b/style.css
@@ -1,6 +1,57 @@
+
+/* UNIVERSAL */
+
 * {
     margin: 0;
     padding: 0;
   }
   
-  
+body {
+    font-size: 16px;
+} 
+
+a {
+    color: black;
+    text-decoration: none;
+  }
+
+
+/* BANNER SECTION */
+
+.banner {
+    width: 100%;
+    height: 20rem;
+    background-image: url("./images/latrigg-banner.jpg");
+    background-size: cover;
+    background-position: top center;
+}
+
+.banner-text h1 {
+    font-family: 'Roboto Slab', serif;
+    text-align: center;
+    font-size: 3rem;
+}
+
+.banner-text a {
+    font-family: 'Roboto Slab', serif;
+    font-size: 2rem;
+    color: white;
+    text-align: center;
+    margin-top: 200px;
+}
+
+@media only screen and (min-width: 601px) {
+    .banner-text a {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .banner-text h1 {
+        font-size: 2rem;
+    }
+
+    .banner-text a {
+        display: block;
+    }
+}
