--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   
 body {
     font-size: 16px;
+    font-family: 'Roboto', sans-serif;
 } 
 
 a {
@@ -55,3 +56,7 @@ a {
         display: block;
     }
 }
+
+
+/* MAIN */
+
