Add aside panel and dog pic

--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@
   }
   
 body {
-    font-size: 16px;
+    font-size: 16px;    
     font-family: 'Roboto', sans-serif;
 } 
+
+p {
+    line-height: 1.4rem;
+}
 
 a {
     color: black;
@@ -59,4 +63,41 @@ a {
 
 
 /* MAIN */
+
+main {
+    display: grid;
+    width: 100%;
+    height: auto;
+    grid-template: repeat(3, 1fr) / 2fr 1fr;
+}
+
+@media only screen and (max-width: 600px) {
+    main {
+        display: block;
+    }
+}
+
+section {
+    margin: 2rem;
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+aside {
+    margin: 2rem;
+    padding: 1rem;
+    grid-area: 1 / 2 / 2 / 3;
+    background-color: gainsboro;
+}
+
+aside h4 {
+    font-family: 'Roboto Slab', serif;
+}
+
+aside img {
+    margin: 1rem 0;
+    width: 95%;
+    transform: rotate(1.5deg);
+    border: 5px solid white;
+    box-shadow: 5px 5px 5px grey;
+}
 
