--- a/style.css
+++ b/style.css
@@ -16,10 +16,15 @@ p {
 }
 
 a {
-    color: black;
+    color: darkslategray;
     text-decoration: none;
     font-weight: bold;
   }
+
+a:hover {
+    color: teal;
+}
+
 
 
 /* BANNER SECTION */
@@ -81,6 +86,12 @@ main {
 section {
     margin: 2rem;
     grid-area: 1 / 1 / 2 / 2;
+}
+
+section img {
+    margin: 1rem 0;
+    width: 49%;
+    
 }
 
 aside {
