--- a/style.css
+++ b/style.css
@@ -67,6 +67,39 @@ a:hover {
     }
 }
 
+/* NAV */
+
+nav {
+    background-color: teal;
+    text-align: left;
+    width: 100%;
+    position: absolute;
+
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav li {
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+}
+
+nav a {
+    color: white;
+    font-size: 1.2rem;
+}
+
+nav a:hover {
+    color: thistle;
+}
+
+
+/* ===========================================
+13 mins into https://www.youtube.com/watch?v=8QKOaTYvYUA
+============================================== */ 
+
 
 /* MAIN */
 
@@ -127,6 +160,7 @@ aside a:hover {
     color: teal;
 }
 
+/* FOOTER */
 
 footer {
     padding: 0.5rem;
